--- a/pages/main-music/main-music.wxml
+++ b/pages/main-music/main-music.wxml
@@ -1,6 +1,51 @@
 <!--pages/main-music/main-music.wxml-->
 <van-search 
   value="{{ searchValue }}"
-  background="#ff0000"
+  shape="round"
+  background="#fafafa"
   placeholder="请输入搜索关键词"
+  bind:click-input="onSearchClick"
 />
+
+<swiper 
+  class="banner"
+  circular
+  autoplay
+  indicator-dots
+  style="height: {{bannerHeight}}px;"
+  wx:if="{{banners.length}}"
+>
+  <block wx:for="{{banners}}" wx:key="targetId">
+    <swiper-item class="item">
+      <image 
+        class="banner-image"
+        src="{{item.imageUrl}}"
+        mode="widthFix"
+        bindload="onBannerLoad"
+      />
+    </swiper-item>
+  </block>
+</swiper>
+
+<view class="recommend">
+  <area-header title="推荐歌曲" bind:moreclick="onRecommendMoreClick" />
+  <view class="list">
+    <block wx:for="{{recommendSongs}}" wx:key="id">
+      <song-item-v1 itemData="{{item}}"/>
+    </block>
+  </view>
+</view>
+
+<menu-area title="华语歌单" menuList="{{ChMenuList}}" />
+<menu-area title="流行歌单" menuList="{{PopMenuList}}" />
+
+
+<!-- 遍历对象时,item: value, index: key -->
+<view class="ranking">
+  <area-header title="巅峰榜" hasMore="{{false}}"/>
+  <view class="ranking-list">
+    <block wx:for="{{rankingInofs}}" wx:key="id">
+      <ranking-item itemData="{{item}}" key="{{index}}" />
+    </block>
+  </view>
+</view>
