--- a/pages/main-music/main-music.wxml
+++ b/pages/main-music/main-music.wxml
@@ -27,7 +27,7 @@
   </block>
 </swiper>
 
-<view class="recommend">
+<view class="recommend" wx:if="{{recommendSongs.length}}">
   <area-header title="推荐歌曲" bind:moreclick="onRecommendMoreClick" />
   <view class="list">
     <block wx:for="{{recommendSongs}}" wx:key="id">
